--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,15 @@
   text-align: center;
 }
 
+.container {
+  margin: 0 auto;
+  width: 600px;
+}
+
+.form {
+  margin-top: 120px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
